--- a/app/src/main/res/layout/fragment_places.xml
+++ b/app/src/main/res/layout/fragment_places.xml
@@ -4,9 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
+        android:paddingLeft="@dimen/space_10"
+        android:paddingRight="@dimen/space_10"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
