--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:textColor">@color/text_color</item>
+        <!--<item name="android:editTextColor">@color/edit_text_olor</item>-->
+        <!--<item name="android:textColorPrimary">@color/text_color_primary</item>-->
+        <!--<item name="android:textColorSecondary">@color/text_color_secondary</item>-->
+        <!--<item name="android:textColorTertiary">@color/text_color_tertiary</item>-->
+        <!--<item name="android:textColorPrimaryInverse">@color/text_color_primary_inverse</item>-->
+        <!--<item name="android:textColorSecondaryInverse">@color/text_color_secondary_inverse</item>-->
+        <!--<item name="android:textColorTertiaryInverse">@color/text_color_tertiary_inverse</item>-->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -17,5 +25,14 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="news_card">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">@dimen/space_3</item>
+        <item name="android:layout_marginRight">@dimen/space_3</item>
+        <item name="android:layout_marginTop">@dimen/space_5</item>
+        <item name="android:layout_marginBottom">@dimen/space_5</item>
+    </style>
 
 </resources>
