--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:textColor">@color/text_color</item>
+        <!--<item name="android:textColor">@color/text_color</item>-->
         <!--<item name="android:editTextColor">@color/edit_text_olor</item>-->
         <!--<item name="android:textColorPrimary">@color/text_color_primary</item>-->
         <!--<item name="android:textColorSecondary">@color/text_color_secondary</item>-->
