--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     card_view:cardCornerRadius="@dimen/card_corner_radius"
     card_view:cardElevation="@dimen/elevation_large">
 
-    <ImageView
-        android:id="@+id/photo"
+    <RelativeLayout
+        android:id="@+id/card_layout"
+        android:gravity="top"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <net.kibotu.berlinplaces.ui.places.StretchableImageView
+            android:id="@+id/photo"
+            android:layout_alignParentTop="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true" />
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_below="@id/photo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/pressed_color"
+                android:padding="@dimen/space_15" />
+
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
