--- a/app/src/main/res/layout/fragment_places_stack.xml
+++ b/app/src/main/res/layout/fragment_places_stack.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="?attr/actionBarSize"
     android:clipChildren="false">
 
     <link.fls.swipestack.SwipeStack
         android:id="@+id/swipeStack"
-        android:layout_width="320dp"
-        android:layout_height="240dp"
-        android:padding="32dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="32dp"
+        android:paddingBottom="48dp"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp" />
 
 </FrameLayout>
