--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -9,25 +9,24 @@
 
     <RelativeLayout
         android:id="@+id/card_layout"
-        android:gravity="top"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="top"
         android:orientation="vertical">
 
-        <net.kibotu.berlinplaces.ui.places.StretchableImageView
+        <ImageView
             android:id="@+id/photo"
-            android:layout_alignParentTop="true"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_alignParentTop="true" />
+
+        <TextView
+            android:background="@color/transparent_white"
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true" />
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_below="@id/photo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/pressed_color"
-                android:padding="@dimen/space_15" />
+            android:layout_below="@id/photo"
+            android:padding="@dimen/space_15" />
 
     </RelativeLayout>
 
