--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
+        app:behavior_overlapTop="@dimen/activity_vertical_margin"
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
