fixed navigation with contacts in event detail page

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,4 +37,5 @@
 
     <dimen name="elevation_normal">4dp</dimen>
     <dimen name="elevation_large">8dp</dimen>
+    <dimen name="contact_item_size">72dp</dimen>
 </resources>
