added icons to stackview

--- a/app/src/main/res/layout/fragment_places_stack.xml
+++ b/app/src/main/res/layout/fragment_places_stack.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipChildren="false"
     android:orientation="vertical">
 
-    <link.fls.swipestack.SwipeStack
-        android:id="@+id/swipeStack"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingBottom="48dp"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:paddingLeft="@dimen/space_15"
+        android:paddingRight="@dimen/space_15"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
@@ -24,28 +19,42 @@
         android:gravity="center">
 
         <ImageView
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/accent" />
+            android:layout_weight="1"
+            android:id="@+id/undo"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/ic_replay_amber_300_18dp" />
 
         <ImageView
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/accent" />
+            android:layout_weight="1"
+            android:id="@+id/reject"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:srcCompat="@drawable/ic_clear_deep_orange_a400_18dp" />
 
         <ImageView
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/accent" />
+            android:layout_weight="1"
+            android:id="@+id/like"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:srcCompat="@drawable/ic_favorite_green_600_18dp" />
 
         <ImageView
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:background="@color/accent" />
+            android:layout_weight="1"
+            android:id="@+id/favorite"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/ic_star_light_blue_700_18dp" />
 
     </LinearLayout>
 
-</LinearLayout>
+    <link.fls.swipestack.SwipeStack
+        android:id="@+id/swipeStack"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="98dp"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp" />
+
+</RelativeLayout>
