--- a/app/src/main/res/values/environment.xml
+++ b/app/src/main/res/values/environment.xml
@@ -3,4 +3,7 @@
     <string name="facebook_app_id">1025530800816569</string>
     <string name="facebook_access_token_encoded">EAACEdEose0cBABF8Np3eAfZBdF4YnqAwFV9ixmcrNMG2vBtw8uqUq2nRkIevWiHFJgYUrb7OALv6WdZCU3pZCFhzbplPuPi5BdadNHzDPz8aHDFZA6eQR8YDRj2jGzkrPSCQNrWjiECCETiQP32WWtPhnPnCVrr4oeZCP3mUdPAZDZD</string>
     <string name="facebook_access_token">1025530800816569|4NCuyoxDDKw8oOCmx0O-QppM50g</string>
+
+    <!-- if your App ID is 1234567, you should use fb1234567 -->
+    <string name="fb_login_protocol_scheme">fb1025530800816569</string>
 </resources>
