--- a/app/src/main/res/values/environment.xml
+++ b/app/src/main/res/values/environment.xml
@@ -6,4 +6,5 @@
 
     <!-- if your App ID is 1234567, you should use fb1234567 -->
     <string name="fb_login_protocol_scheme">fb1025530800816569</string>
+    <string name="paul_service_app_id">8fda75fd-6f6c-401e-8adc-f58aeffb92d2</string>
 </resources>
